<resources>
    <string name="app_name">ZippyServiceJSON</string>
    <string name="enter_zipcode">Enter Zipcode</string>
    <string name="submit">Submit</string>
    <string name="accessing_zip_code_info">Zippy Service 2.0</string>
    <string name="zipcode_goes_here">Zipcode goes here...</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="country_goes_here">Country goes here...</string>
    <string name="state_goes_here">State goes here...</string>
    <string name="state">State</string>
</resources>